--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .app {
     background-color: #f2f7ff;
 }
+
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+button:hover {
+    cursor: pointer;
+}
